; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/rbu/extr_sqlite3rbu.c_sqlite3rbu_bp_progress.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/rbu/extr_sqlite3rbu.c_sqlite3rbu_bp_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sqlite3rbu_bp_progress(%struct.TYPE_3__* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  store i32 10000, i32* %7, align 4
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %47 [
    i32 128, label %11
    i32 129, label %30
    i32 131, label %33
    i32 130, label %44
  ]

11:                                               ; preds = %3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = icmp sgt i32 %14, 0
  br i1 %15, label %16, label %26

16:                                               ; preds = %11
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 4
  %19 = load i32, i32* %18, align 4
  %20 = mul nsw i32 10000, %19
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 4
  %24 = sdiv i32 %20, %23
  %25 = load i32*, i32** %5, align 8
  store i32 %24, i32* %25, align 4
  br label %28

26:                                               ; preds = %11
  %27 = load i32*, i32** %5, align 8
  store i32 -1, i32* %27, align 4
  br label %28

28:                                               ; preds = %26, %16
  %29 = load i32*, i32** %6, align 8
  store i32 0, i32* %29, align 4
  br label %49

30:                                               ; preds = %3
  %31 = load i32*, i32** %5, align 8
  store i32 10000, i32* %31, align 4
  %32 = load i32*, i32** %6, align 8
  store i32 0, i32* %32, align 4
  br label %49

33:                                               ; preds = %3
  %34 = load i32*, i32** %5, align 8
  store i32 10000, i32* %34, align 4
  %35 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 4
  %38 = mul nsw i32 10000, %37
  %39 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %40 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = sdiv i32 %38, %41
  %43 = load i32*, i32** %6, align 8
  store i32 %42, i32* %43, align 4
  br label %49

44:                                               ; preds = %3
  %45 = load i32*, i32** %5, align 8
  store i32 10000, i32* %45, align 4
  %46 = load i32*, i32** %6, align 8
  store i32 10000, i32* %46, align 4
  br label %49

47:                                               ; preds = %3
  %48 = call i32 @assert(i32 0)
  br label %49

49:                                               ; preds = %47, %44, %33, %30, %28
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
